--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -483,7 +483,7 @@ body.active h2{
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero-bg.jpg") top left;
+  background: url("../img/Blue\ Modern\ Medical\ Instagram\ Post.png") top left;
   background-size: cover;
   position: relative;
 }
